--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     //Motion layout
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta8'
+    implementation 'com.itextpdf:itextg:5.5.10'
 }
