--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     def nav_version = "2.3.0"
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.0'
+    implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation project(path: ':scanlibrary')
@@ -40,5 +40,9 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     //Motion layout
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta8'
+    //PDF Converter
     implementation 'com.itextpdf:itextg:5.5.10'
+    //PDF Viewer
+    implementation 'com.github.manishkummar21:AndroidPdfViewer:1.0'
+    implementation 'com.github.MikeOrtiz:TouchImageView:3.0.1'
 }
