--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.firebase.crashlytics'
 
 android {
     compileSdkVersion 29
@@ -45,4 +47,8 @@ dependencies {
     //PDF Viewer
     implementation 'com.github.manishkummar21:AndroidPdfViewer:1.0'
     implementation 'com.github.MikeOrtiz:TouchImageView:3.0.1'
+    //Firebase
+    implementation 'com.google.firebase:firebase-analytics:17.4.4'
+    implementation 'com.google.firebase:firebase-crashlytics:17.1.1'
+    implementation 'com.google.android.gms:play-services-mlkit-text-recognition:16.1.0'
 }
