--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.4.4'
     implementation 'com.google.firebase:firebase-crashlytics:17.1.1'
     implementation 'com.google.android.gms:play-services-mlkit-text-recognition:16.1.0'
+    implementation 'com.google.android.gms:play-services-ads:19.3.0'
 }
