--- a/scanlibrary/build.gradle
+++ b/scanlibrary/build.gradle
@@ -30,4 +30,5 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation "androidx.exifinterface:exifinterface:1.3.2"
 }
