--- a/scanlibrary/build.gradle
+++ b/scanlibrary/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 30
@@ -31,4 +33,5 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation "androidx.exifinterface:exifinterface:1.3.2"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
