commit for depricated code removed

--- a/scanlibrary/build.gradle
+++ b/scanlibrary/build.gradle
@@ -51,5 +51,7 @@ dependencies {
     implementation "androidx.camera:camera-lifecycle:$camerax_version"
     // CameraX View class
     implementation "androidx.camera:camera-view:1.0.0-alpha24"
+    // Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1"
 
 }
