--- a/scanlibrary/src/main/AndroidManifest.xml
+++ b/scanlibrary/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.scanlibrary">
 
     <uses-feature
@@ -8,7 +9,8 @@
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
 
     <application
         android:allowBackup="true"
@@ -18,12 +20,13 @@
         <activity
             android:name=".CameraActivity"
             android:configChanges="orientation|screenSize"
+            android:exported="false"
             android:screenOrientation="portrait"
             android:theme="@style/cameraTheme" />
         <activity
             android:name=".ScanActivity"
             android:configChanges="orientation|screenSize"
-            android:label="@string/app_name"
+            android:exported="false"
             android:screenOrientation="portrait" />
 
         <provider
